@@ -12,6 +12,8 @@ Release 0.8.3
 - added new setting 'isEnforceSSL'
 - remove code from ZMZcoObserver that actually should be in ZMEventFixes...
 - implement support for file upload (so far one file only)
+- rename 'isAnonymousCheckout' to 'isGuestCheckout'
+- more changes to make checkout without registering 'guest checkout'
 
 Release 0.8.2
 - product_notifications.php should not use $zm_account
